# BigData

./: docker-compose.yaml  dockerfile  notaire_cookies.json  pyproject.toml
backend/: api.py  app.py  database.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: DirectorsTable.jsx  FinancialTable.jsx  SankeyChart.jsx  SearchBar.jsx
ingestion/: bce.py  collection_finale.py  consult.py  csv_ingestor.py  dirigeants.py  lecture.py  silver.py  silver_pipeline.py  spark_data.py  state_db.py  strator.py
