[project]
name = "scraping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "axios>=0.4.0",
    "bs4>=0.0.2",
    "camelot-py[cv]>=2.0.0",
    "duckdb>=1.5.4",
    "fastapi>=0.139.0",
    "frontend>=0.0.3",
    "hdfs>=2.7.3",
    "pandas>=3.0.3",
    "pdfplumber>=0.11.10",
    "playwright>=1.61.0",
    "pymongo>=4.17.0",
    "pymupdf>=1.28.0",
    "pyspark==3.5.6",
    "react>=4.3.0",
    "requests[socks]>=2.34.2",
    "routes>=2.5.1",
    "uvicorn>=0.49.0",
]
